codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__context_anchor_items_history.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: combined
---
• Context anchor saved: ctx-123 · before branch


• Context rewound to anchor: ctx-123 · dropped 3 user turns
