codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_active_throughput_narrow_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 111
expression: "throughput_footer_snapshot(&mut active_chat, 20)"
---
"                    "
"                    "
"› Ask Codex to do a "
"                    "
"  ~10.0 tok/s       "
