codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_final_throughput_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 119
expression: "throughput_footer_snapshot(&mut final_chat, 80)"
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  35.0 tok/s                                                                    "
